Add iPad version.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name='viewport' content='width=device-width,iniital-scale=1'>
+	<meta name='viewport' content='width=device-width,inital-scale=1'>
 	<title>Bigelli's Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/responsive.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -28,7 +28,7 @@
 		</section>
 
 		<section class="row horizontal_rule">
-			<div class="col-md-12" style='padding: 0;'>
+			<div class="col-md-12 hr_content">
 				<hr class='hr'>
 			</div>
 		</section>
