Replace placeholders by real images

--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
 
 		<section class='row header'>
 			<div class="col-md-6 pull-left header_logo">
-				<picture>
-					<source media='(max-width: 449px)' srcset='http://placehold.it/100x100'>
-					<source media='(min-width: 450px)' srcset='http://placehold.it/140x140'>	
-					<img src='http://placehold.it/50x50' class='header_logo_image'>
-				</picture>
+					<img src='images/udacity-logo.png' class='header_logo_image'>
 			</div>
 
 			<div class="col-md-6 pull-right header_title  text-uppercase text-right">
@@ -36,8 +32,8 @@
 		<section class="row main">
 			<div class='col-md-12 main_image'>
 				<picture>
-					<source media='(max-width: 450px)' srcset='http://placehold.it/500x250'>
-					<img src='http://placehold.it/900x350' class='img-responsive'>
+					<source media='(max-width: 500px)' srcset='images/main-image-small.png'>
+					<img src='images/main-image.png' class='img-responsive'>
 				</picture>
 			</div>
 		</section>
@@ -51,7 +47,7 @@
 		<section class="row footer">
 				<div class="work_item col-md-4 text-center">
 					<picture class='item_image'>
-						<img src="http://placehold.it/275x200">
+						<img src="images/mockup-to-article.png" class='item_image'>
 					</picture>
 					<h3 class='text-uppercase'>Mockup to Article</h3>
 					<div class='description'>
@@ -61,7 +57,7 @@
 				</div>
 				<div class="work_item  col-md-4 text-center">
 					<picture class='item_image'>
-						<img src="http://placehold.it/275x200">
+						<img src="images/animal-trading-card.png">
 					</picture>
 					<h3 class='text-uppercase'>Animal Trading Card</h3>
 					<div class='description'>
@@ -71,7 +67,7 @@
 				</div>
 				<div class="work_item col-md-4 text-center">
 					<picture class='item_image'>
-						<img src="http://placehold.it/275x200">
+						<img src="images/portfolio.png">
 					</picture>
 					<h3 class='text-uppercase'>Portfolio Site</h3>
 					<div class='description'>
