Change color scheme.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<h3 class='text-uppercase'>Mockup to Article</h3>
 					<div class='description'>
 						<p>Use HTML to transform a mockup pdf file into a website article. </p>
-						<a href=''>GitHub Repository</a>
+						<a href='' class='text-underline'><u>GitHub Repository</u></a>
 					</div>
 				</div>
 				<div class="work_item  col-md-4 text-center">
@@ -63,7 +63,7 @@
 					<h3 class='text-uppercase'>Animal Trading Card</h3>
 					<div class='description'>
 						<p>Use HTML and CSS to create a static website of an Animal Trading Card. </p>
-						<a href=''>GitHub Repository</a>
+						<a href=''><u>GitHub Repository</u></a>
 					</div>
 				</div>
 				<div class="work_item col-md-4 text-center">
@@ -73,7 +73,7 @@
 					<h3 class='text-uppercase'>Portfolio Site</h3>
 					<div class='description'>
 						<p>Use HTML and CSS to create a responsive portfolio website. </p>
-						<a href=''>GitHub Repository</a>
+						<a href=''><u>GitHub Repository</u></a>
 					</div>
 				</div>
 		</section>
