Change <section>'s to <div>'s

--- a/index.html
+++ b/index.html
@@ -13,42 +13,42 @@
 <body>
 	<div class='content'>
 
-		<section class='row header'>
+		<div class='row header'>
 			<div class="col-md-6 pull-left header_logo">
-					<img src='images/udacity-logo.png' class='header_logo_image'>
+					<img src='images/udacity-logo.png' class='header_logo_image' alt='Udacity logo'>
 			</div>
 
 			<div class="col-md-6 pull-right header_title  text-uppercase text-right">
 				<h1>Vitor Bigelli</h1>
 				<h4>Front-End Developer</h4>
 			</div>
-		</section>
+		</div>
 
-		<section class="row horizontal_rule">
+		<div class="row horizontal_rule">
 			<div class="col-md-12 hr_content">
 				<hr class='hr'>
 			</div>
-		</section>
+		</div>
 
-		<section class="row main">
+		<div class="row main">
 			<div class='col-md-12 main_image'>
 				<picture>
 					<source media='(max-width: 500px)' srcset='images/main-image-small.png'>
-					<img src='images/main-image.png' class='img-responsive'>
+					<img src='images/main-image.png' class='img-responsive' alt='Front-End Development Image'>
 				</picture>
 			</div>
-		</section>
+		</div>
 
-		<section class='row footer_title text-uppercase'>
+		<div class='row footer_title text-uppercase'>
 			<div class="col-md-12 featured_works ">
 				<h2>Featured Works</h2>
 			</div>
-		</section>
+		</div>
 
-		<section class="row footer">
+		<div class="row footer">
 				<div class="work_item col-md-4 text-center">
 					<picture class='item_image'>
-						<img src="images/mockup-to-article.png" class='item_image'>
+						<img src="images/mockup-to-article.png" alt='Work image'>
 					</picture>
 					<h3 class='text-uppercase'>Mockup to Article</h3>
 					<div class='description'>
@@ -58,7 +58,7 @@
 				</div>
 				<div class="work_item  col-md-4 text-center">
 					<picture class='item_image'>
-						<img src="images/animal-trading-card.png">
+						<img src="images/animal-trading-card.png" alt='Work image'>
 					</picture>
 					<h3 class='text-uppercase'>Animal Trading Card</h3>
 					<div class='description'>
@@ -68,7 +68,7 @@
 				</div>
 				<div class="work_item col-md-4 text-center">
 					<picture class='item_image'>
-						<img src="images/portfolio.png">
+						<img src="images/portfolio.png" alt='Work image'>
 					</picture>
 					<h3 class='text-uppercase'>Portfolio Site</h3>
 					<div class='description'>
@@ -76,7 +76,7 @@
 						<a href=''><u>GitHub Repository</u></a>
 					</div>
 				</div>
-		</section>
+		</div>
 
 
 	</div>
