--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
 	<meta name='viewport' content='width=device-width,inital-scale=1'>
 	<title>Bigelli's Portfolio</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/responsive.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	
+	<link rel="stylesheet" href="css/responsive.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div class='content'>
-
-		<div class='row header'>
+	<div class='container'>
+		<header class='row header'>
 			<div class="col-md-6 pull-left header_logo">
 					<img src='images/udacity-logo.png' class='header_logo_image' alt='Udacity logo'>
 			</div>
@@ -22,30 +20,30 @@
 				<h1>Vitor Bigelli</h1>
 				<h4>Front-End Developer</h4>
 			</div>
-		</div>
+		</header>
 
-		<div class="row horizontal_rule">
+		<section class="row horizontal_rule">
 			<div class="col-md-12 hr_content">
 				<hr class='hr'>
 			</div>
-		</div>
+		</section>
 
-		<div class="row main">
+		<section class="row main">
 			<div class='col-md-12 main_image'>
 				<picture>
 					<source media='(max-width: 500px)' srcset='images/main-image-small.png'>
 					<img src='images/main-image.png' class='img-responsive' alt='Front-End Development Image'>
 				</picture>
 			</div>
-		</div>
+		</section>
 
-		<div class='row footer_title text-uppercase'>
+		<footer class='row footer_title text-uppercase'>
 			<div class="col-md-12 featured_works ">
 				<h2>Featured Works</h2>
 			</div>
-		</div>
+		</footer>
 
-		<div class="row footer">
+		<footer class="row footer">
 				<div class="work_item col-md-4 text-center">
 					<picture class='item_image'>
 						<img src="images/mockup-to-article.png" alt='Work image'>
@@ -76,9 +74,7 @@
 						<a href=''><u>GitHub Repository</u></a>
 					</div>
 				</div>
-		</div>
-
-
+		</footer>
 	</div>
 </body>
 </html>
