Adding comments in the HTML and CSS codes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 	<div class='container'>
+
+		<!-- Header section (logo and page title) -->
 		<header class='row header'>
 			<div class="col-md-6 pull-left header_logo">
 					<img src='images/udacity-logo.png' class='header_logo_image' alt='Udacity logo'>
@@ -22,12 +24,14 @@
 			</div>
 		</header>
 
+		<!-- Horizontal rule section -->
 		<section class="row horizontal_rule">
 			<div class="col-md-12 hr_content">
 				<hr class='hr'>
 			</div>
 		</section>
 
+		<!-- Main image section -->
 		<section class="row main">
 			<div class='col-md-12 main_image'>
 				<picture>
@@ -37,12 +41,14 @@
 			</div>
 		</section>
 
-		<footer class='row footer_title text-uppercase'>
+		<!-- Footer section (Featured works) -->
+		<section class='row footer_title text-uppercase'>
 			<div class="col-md-12 featured_works ">
 				<h2>Featured Works</h2>
 			</div>
-		</footer>
+		</section>
 
+		<!-- Footer of the pages (Projects items) -->
 		<footer class="row footer">
 				<div class="work_item col-md-4 text-center">
 					<picture class='item_image'>
